--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "axios": "1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8",
-    "sass": "^1.80.4"
+    "sass": "^1.80.5"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
